force-app/main/default/objects/Applicant_Details__c/Applicant_Details__c.object-meta.xml
<CustomObject>
    <label>Applicant Details</label>
    <nameField>
        <displayFormat>AD-{00000}</displayFormat>
        <label>Applicant Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applicant Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>