force-app/main/default/objects/Applicant_Details__c/fields/SSN__c.field-meta.xml
<CustomField>
    <fullName>SSN__c</fullName>
    <label>SSN</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>